sanity CMS added

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Hello! I am Prerit Agrawal. I am just another guy who loves to code and create beautiful websites and learn fun stuffs.">
+    <meta name="keywords" content="portfolio, full-stack web developer, prerit, prerit agrawal, web, developer">
     <title>Prerit Agrawal</title>
   </head>
   <body>
